use oidc library to login, seems to work needs to be tweeked

--- a/partials/backend/forms/settings/_openidconnect_info.htm
+++ b/partials/backend/forms/settings/_openidconnect_info.htm
@@ -5,7 +5,9 @@
     </div>
     <div class="content">
         <ol>
-            <li><b>Valid OAuth redirect URIs</b> to <span style="color:green"><?= URL::route('flynsarmy_sociallogin_provider_callback', ['OpenID']) ?></span></li>
+            <li><b>Valid OAuth redirect URIs</b> to <span style="color:green">
+                    <?= URL::route('flynsarmy_sociallogin_provider_callback', ['OpenID']) ?>
+                </span></li>
         </ol>
     </div>
 </div>
