--- a/partials/backend/forms/settings/_openidconnect_info.htm
+++ b/partials/backend/forms/settings/_openidconnect_info.htm
@@ -6,7 +6,7 @@
     <div class="content">
         <ol>
             <li><b>Valid OAuth redirect URIs</b> to <span style="color:green">
-                    <?= URL::route('flynsarmy_sociallogin_provider_callback', ['OpenID']) ?>
+                    <?= URL::route('flynsarmy_sociallogin_provider_callback', ['OpenIDConnect']) ?>
                 </span></li>
         </ol>
     </div>
